bpo-39949: Add ... to truncated match in repr(match)